--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: one-word-story
-    databaseName: oneWordStoryDb
-    user: oneWordStoryUser
+    databaseName: one_word_story_db
+    user: one_word_story_user
     plan: free
 
 services:
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: oneWordStoryDb
+          name: one_word_story_db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
